--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.25",
+    "axios": "^0.27.2",
+    "chart.js": "^2.9.4",
     "react": "^16.5.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5",
+    "react-table": "^7.7.0",
     "shortid": "^2.2.13"
   },
   "scripts": {
@@ -13,6 +18,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {}
+  }
 }
